--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,11 @@
-
+{
+  "name": "xbox-remote-backend",
+  "type": "module",
+  "dependencies": {
+    "express": "^4.19.2",
+    "wrtc": "^0.4.7"
+  },
+  "scripts": {
+    "start": "node index.js"
+  }
+}
