--- a/fly.toml
+++ b/fly.toml
@@ -1,1 +1,12 @@
+app = "xbox-remote-web"
+primary_region = "iad"
 
+[build]
+dockerfile = "backend/Dockerfile"
+
+[env]
+PORT = "8080"
+
+[[services]]
+internal_port = 8080
+protocol = "tcp"
