--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,16 @@
+# Example environment variables for Xbox Remote Web backend
 
+# Port the Express server will listen on
+PORT=8080
+
+# Your Azure App (Microsoft login) client ID
+MS_CLIENT_ID=your-azure-client-id-here
+
+# (Optional) Microsoft OAuth secret (only used if you need server-side token refresh)
+MS_CLIENT_SECRET=your-azure-client-secret-here
+
+# (Optional) Redirect URI — must match your Azure app settings
+MS_REDIRECT_URI=https://your-app.fly.dev/
+
+# (Optional) Logging verbosity
+LOG_LEVEL=info
