--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "xbox-remote-frontend",
+  "name": "frontend",
   "private": true,
-  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
