--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "xbox-remote-web",
+  "name": "xbox-remote-vercel",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "build": "cd frontend && npm install && npm run build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "wrtc": "^0.4.7"
+    "next": "14.2.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "simple-oauth2": "^5.1.0",
+    "axios": "^1.7.4"
   }
 }
