--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-PORT=8080
 MS_CLIENT_ID=your-azure-client-id
-MS_CLIENT_SECRET=optional
-MS_REDIRECT_URI=https://xbox-remote-web-production.up.railway.app
+MS_CLIENT_SECRET=your-azure-client-secret
+MS_REDIRECT_URI=https://your-vercel-app.vercel.app/api/callback
